# POO_proiect2

./: Angajati.cpp  Angajati.h  AntrenorSecund.cpp  AntrenorSecund.h  Atacant.cpp  Atacant.h  Bucatar.cpp  Bucatar.h  CMakeLists.txt  CaltitatiJucatori.cpp  CaltitatiJucatori.h  Echipe.cpp  Echipe.h  Fundas.cpp  Fundas.h  Jucator.cpp  Jucator.h  Maseur.cpp  Maseur.h  Mijlocas.cpp  Mijlocas.h  Portar.cpp  Portar.h  Staff.cpp  Staff.h  fct.cpp  fct.h  jucatori.cpp  jucatori.h  main.cpp  redem.me
