cmake_minimum_required(VERSION 3.28)
project(POO_proiect2)

set(CMAKE_CXX_STANDARD 17)

add_executable(POO_proiect2 main.cpp
        jucatori.cpp
        jucatori.h
        Staff.cpp
        Staff.h
        Echipe.cpp
        Echipe.h
        fct.cpp
        fct.h
        Angajati.cpp
        Angajati.h
        Bucatar.cpp
        Bucatar.h
        Maseur.cpp
        Maseur.h
        AntrenorSecund.cpp
        AntrenorSecund.h
        CaltitatiJucatori.cpp
        CaltitatiJucatori.h
        Portar.cpp
        Portar.h
        Mijlocas.cpp
        Mijlocas.h
        Fundas.cpp
        Fundas.h
        Atacant.cpp
        Atacant.h
        Jucator.cpp
        Jucator.h
)
